--- a/main.html
+++ b/main.html
@@ -10,6 +10,11 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<nav>
+		<img src="https://picsum.photos/id/123/200/300" alt="Home">
+		<img src="https://picsum.photos/id/124/200/300" alt="About us">	
+        <img src="https://picsum.photos/id/125/200/300" alt="Contact us">
+	</nav>
 
 </body>
 
