--- a/main.html
+++ b/main.html
@@ -11,11 +11,12 @@
     <script type="text/javascript" src="./script.js">
 </script>
 	<nav>
-		<img src="https://picsum.photos/id/123/200/300" alt="Home">
-		<img src="https://picsum.photos/id/124/200/300" alt="About us">	
-        <img src="https://picsum.photos/id/125/200/300" alt="Contact us">
+		<ul>
+			<li><a href="Home"><img src="https://picsum.photos/id/123/200/300" alt="home">Home</a></li>
+			<li><a href="About us"><img src="https://picsum.photos/id/124/200/300" alt="About us">About us</a></li>
+			<li><a href="Contact"><img src="https://picsum.photos/id/125/200/300"alt="Contact">Contact</a></li>
+		</ul>
 	</nav>
-
 </body>
 
 </html>
