--- a/main.html
+++ b/main.html
@@ -12,9 +12,12 @@
 </script>
 	<nav>
 		<ul>
-			<li><a href="Home"><img src="https://picsum.photos/id/123/200/300" alt="home">Home</a></li>
-			<li><a href="About us"><img src="https://picsum.photos/id/124/200/300" alt="About us">About us</a></li>
-			<li><a href="Contact"><img src="https://picsum.photos/id/125/200/300"alt="Contact">Contact</a></li>
+			<li><a href="Home">Home</a></li>
+			<li><a href="About us">About us</a></li>
+			<li><a href="Contact">Contact</a></li>
+			<img src="https://picsum.photos/id/123/200/300" alt="home">
+			<img src="https://picsum.photos/id/124/200/300" alt="About us">
+		    <img src="https://picsum.photos/id/125/200/300"alt="Contact">
 		</ul>
 	</nav>
 </body>
