--- a/main.html
+++ b/main.html
@@ -14,6 +14,7 @@
 			<li><a href="About us">About us</a></li>
 			<li><a href="Contact us">Contact us</a></li>
 		</ul>
+		    <h1>3 random images</h1>
 		    <img src="https://picsum.photos/id/123/200/300" alt="home" title="img1">
 			<img src="https://picsum.photos/id/124/200/300" alt="About us" title="img2">
 		    <img src="https://picsum.photos/id/125/200/300"alt="Contact" title="img3">
